# fcc-apis-and-microservices

./: README.md  fcc-projects.yaml
.github/workflows/: docker-build.yaml
exercise/: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
exercise/fcc_exercise/: __init__.py  database.py  exercise_flask.py  models.py  views.py
exercise/tests/: exercise_tracker.feature  test_exercise_tracker.py
fcc_timestamp/: __init__.py  timestamp.py
kubernetes/: exercise.yaml  ingress.yaml  nginx-static.yaml  shorturl.yaml  timestamp.yaml  upfile.yaml  whoami.yaml
nginx-static/html/: upfile.html
request_header_parser/: Dockerfile
request_header_parser/fcc_request_header_parser/: __init__.py  request_header_parser.py  request_header_parser_service.py
request_header_parser/tests/: test_request_header_parser.py
shorturl/: Dockerfile  pyproject.toml
shorturl/fcc_shorturl/: __init__.py  shorturl_flask.py
tests/: test_timestamp.py
timestamp/: Dockerfile  pyproject.toml  requirements.txt  timestamp.py
timestamp/fcc_timestamp/: __init__.py  timestamp.py  timestamp_flask.py  timestamp_service.py
timestamp/tests/: test_timestamp.py
upfile/: Dockerfile  pyproject.toml
upfile/fcc_upfile/: __init__.py  upfile.py
upfile/tests/: test_upfile.py
url-shortener/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
url-shortener/fcc_shorturl/: redis_shortened_storage.py  shorturl_flask.py
url-shortener/fcc_url_shortener/: __init__.py  redis_shortened_storage.py  url_shortener_flask.py
url-shortener/tests/: test_redis_shortened_storage.py  test_shorturl_flask.py
whoami/: Dockerfile  pyproject.toml
whoami/fcc_whoami/: __init__.py  whoami_flask.py
whoami/tests/: test_whoami_flask.py
