[tool.poetry]
name = "fcc-exercise"
version = "0.1.0"
description = "freeCodeCamp.com Exercise Tracker project"
authors = ["Daniel Lemm <61800298+ffe4@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask_sqlalchemy = "^2.4.4"
python-dateutil = "^2.8.1"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
pytest-bdd = "^3.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
