[tool.poetry]
name = "fcc-shorturl"
version = "0.1.0"
description = "freeCodeCamp.com URL Shortener Microservice project"
authors = ["Daniel Lemm <61800298+ffe4@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^3.5.3"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
fakeredis = "^1.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
