[tool.poetry]
name = "fcc-upfile"
version = "0.1.0"
description = "freeCodeCamp.com File Metadata Microservice project"
authors = ["Daniel Lemm <61800298+ffe4@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
