[tool.poetry]
name = "fcc-whoami"
version = "0.1.0"
description = "freeCodeCamp.com Request Header Parser Microservice project"
authors = ["Daniel Lemm <61800298+ffe4@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
